crate presse page

--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -43,6 +43,16 @@
   display: flex;
 }
 
+@mixin flex-align($parameter){
+  -webkit-align-items: $parameter; /* Safari 7.0+ */
+  align-items: $parameter;
+}
+
+@mixin flex-justify($parameter){
+  -webkit-justify-items: $parameter; /* Safari 7.0+ */
+  justify-items: $parameter;
+}
+
 @mixin box-shadow($top, $left, $blur, $color, $inset:"") {
   -webkit-box-shadow: $top $left $blur $color #{$inset};
   -moz-box-shadow: $top $left $blur $color #{$inset};
