--- a/scss/patterns/_awards.scss
+++ b/scss/patterns/_awards.scss
@@ -1,22 +1,34 @@
 .awards{
   background: $white;
-  padding:112px 0 90px;
+  padding:60px 0 40px;
+  @media screen and (min-width: $desktop-small){
+    padding:112px 0 90px;
+  }
   .sidebar{
     border-top: 6px solid #fdab34;
   }
   .sub-content{
     .tabs-container{
+      .controls{
+        display: none;
+      }
       .tabs-panel{
         .slide{
           display: flex;
           flex-wrap: wrap;
-          margin:0 -8px;
+          @media screen and (min-width: $mobile-small) {
+            margin: 0 -8px;
+          }
           .item{
-            margin:10px 8px;
-            width: calc(50% - 16px);
+            width: 100%;
             background-repeat: no-repeat;
             background-position: center center;
             box-shadow: 0px 0px 2px #ccc;
+            margin-bottom: 15px;
+            @media screen and (min-width: $mobile-small){
+              width: calc(50% - 16px);
+              margin:0 8px 16px 8px;
+            }
           }
           .item__image{
             @include display-flex();
