--- a/scss/patterns/_keyfigures.scss
+++ b/scss/patterns/_keyfigures.scss
@@ -14,6 +14,12 @@
     }
     .button_read__more{
       bottom: -90px;
+      @media screen and (min-width: $mobile-small){
+        bottom: -120px;
+      }
+      @media screen and (min-width: $tablet-medium){
+        bottom: -90px;
+      }
     }
   }
 }
