--- a/scss/patterns/_project_home.scss
+++ b/scss/patterns/_project_home.scss
@@ -49,7 +49,7 @@
       position: relative;
       padding:51px 25px 35px 47px;
       font-size: 18px;
-      border-top: 5px solid #ff0d0d;
+      border-top: 6px solid #ff0d0d;
       box-shadow: 1px 1px 12px #ccc;
       @media screen and (min-width: $tablet-medium){
         max-width: 57%;
@@ -65,6 +65,9 @@
         margin-bottom: 2px;
         a{
           color:$navy-blue;
+          &:hover{
+            color: #ff0d0d;
+          }
         }
       }
       .content{
@@ -77,6 +80,13 @@
         right:0;
         margin-left: 0;
         margin-right: 0;
+      }
+      .project_title{
+        a{
+          &:hover{
+            color: #9ce3f4;
+          }
+        }
       }
       .project__home--item--main{
         padding-top:0;
