--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,7 @@
 @import "patterns/_awards";
 @import "patterns/_sage";
 @import "patterns/_social";
+@import "patterns/_presse";
 
 //Pages
 @import "pages/_404";
