--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,6 +41,9 @@
 @import "patterns/_sage";
 @import "patterns/_social";
 @import "patterns/_presse";
+@import "patterns/_list_actua";
+@import "patterns/_page_not_found";
+@import "patterns/_pager";
 
 //Pages
 @import "pages/_404";
