--- a/scss/patterns/_presse.scss
+++ b/scss/patterns/_presse.scss
@@ -46,7 +46,7 @@
     @media screen and (min-width: $desktop-small){
       margin-right: 0;
     }
-    .presses-list{
+    .press-list{
       .press-body{
         .press-image{
           img{
