--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -29,10 +29,12 @@ $dark: #000;
 $navy-blue: #051039;
 $red: #ff0d0d;
 $color-readmore: #0062e6;
+$light-blue: #d5ecf2;
+$orange: #f05428;
 
 //Breakpoint
 $mobile-small: 480px;
 $tablet-medium: 768px;
 $tablet-lage:992px;
 $desktop-small: 1024px;
-$desktop-medium: 1260px;
+$desktop-medium: 1280px;
