--- a/scss/patterns/_complex_page_intro.scss
+++ b/scss/patterns/_complex_page_intro.scss
@@ -1,6 +1,6 @@
 .complex-page-intro{
   background: $white;
-  padding: 52px 0 50px;
+  padding: 0 0 50px;
   .container{
     @media screen and (min-width: $tablet-medium){
       padding-left:58px;
