--- a/scss/patterns/_global.scss
+++ b/scss/patterns/_global.scss
@@ -46,6 +46,12 @@ h2{
  font-family: $font-bold;
  color:$navy-blue;
 }
+.no_banner, .no-banner{
+ padding-top:125px;
+ @media screen and (min-width: $tablet-lage){
+  padding-top:138px;
+ }
+}
 .title{
  font-family: $font-bold;
  font-size: 40px;
@@ -133,6 +139,8 @@ h2{
   color: $navy-blue;
   font-size: 18px;
   margin-bottom: 15px;
+  padding-bottom: 18px;
+  position: relative;
   @media screen and (min-width: $mobile-small){
    width: calc(50% - 18px);
    margin:0 9px;
@@ -141,7 +149,7 @@ h2{
    font-size: 65px;
    font-family: $font-bold;
    position: relative;
-   margin-top: 10px;
+   margin-top: 18px;
    margin-bottom: 5px;
    &:before{
     content:"";
@@ -155,7 +163,7 @@ h2{
     bottom:9px;
    }
    &-legend{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     .sublegend{
      font-size: 15px;
      color:$textcolor;
@@ -168,7 +176,11 @@ h2{
   .read{
    margin-bottom: 0;
    padding:5px 0 5px 25px;
-   background: rgba($color-readmore, 0.33);
+   position: absolute;
+   left:0;
+   right:0;
+   bottom:-18px;
+   background: #aacaf8;
    transition:all 1s ease;
    &:hover{
     background: $color-readmore;
@@ -212,7 +224,6 @@ h2{
 }
 .reveal{
  width: 100%;
- max-width: 75%;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
@@ -233,13 +244,22 @@ h2{
   width: 100%;
   position: relative;
  }
+ .box-head{
+  @include display-flex();
+ }
  .modal-close {
   color: #fff;
   position: absolute;
-  right: -40px;
+  left:50%;
   top: -40px;
+  transform: translateX(-50%);
   z-index: 999999;
   cursor: pointer;
+  @media screen and (min-width: $desktop-medium){
+   right: -40px;
+   left:auto;
+   transform: translateX(0);
+  }
   .content {
    position: relative;
    a {
@@ -277,8 +297,12 @@ h2{
    margin-left: auto;
    margin-right: auto;
    .box-head-left{
-    padding-left: .5rem;
-    padding-right: .5rem;
+    padding-left: 35px;
+    padding-right: 35px;
+    width: 35%;
+   }
+   .box-head-right{
+    width: 60%;
    }
   }
  }
@@ -287,14 +311,6 @@ h2{
  }
 }
 .reveal-overlay{
- display: none;
- background: rgba($dark, .5);
- position: fixed;
- top:0;
- bottom:0;
- right:0;
- left:0;
- z-index: 999;
  &.is-active{
   display: block;
  }
@@ -362,6 +378,7 @@ h2{
 //style of button
 .tabs{
  li{
+  margin:0 !important;
   .read__more{
    padding-top:16px;
    padding-bottom: 16px;
@@ -371,6 +388,7 @@ h2{
    &:hover, &.is-active{
     border-top:3px solid $navy-blue;
     padding-left: 52px;
+    color:$navy-blue !important;
     &:before{
      border-left-color: $navy-blue;
      left: 27px;
@@ -428,5 +446,21 @@ h2{
     margin:0 43px;
    }
   }
+ }
+}
+.fancybox-inner{
+ overflow: inherit !important;
+}
+.fancybox-close{
+ display: none;
+}
+.fancybox-skin{
+ box-shadow: none !important;
+ background: none;
+}
+.animation_hover{
+ transition: all .5s ease;
+ &.hover_active{
+  transform: translateY(25px);
  }
 }
