--- a/scss/patterns/_pager.scss
+++ b/scss/patterns/_pager.scss
@@ -1,31 +1,61 @@
-.pager{
-  text-align: center;
-  li{
-    display: inline-block;
-    font-family: $font-bold;
-    font-size: 15px;
-    margin:0 2px;
-    height: 30px;
-    width: 30px;
-    line-height: 30px;
-    a{
-      color:$navy-blue;
+.item-list{
+  @media screen and (min-width: $tablet-lage) {
+    //position: absolute;
+    width: 100%;
+  }
+  .pager{
+    text-align: center;
+    margin-bottom: 50px;
+    @media screen and (min-width: $tablet-lage){
+      margin-bottom: 20px;
+    }
+    li{
+      display: inline-block;
+      font-family: $font-bold;
+      font-size: 15px;
+      margin:0 2px;
       height: 30px;
       width: 30px;
       line-height: 30px;
-      display: block;
-    }
-    &.pager-current, &:hover{
-      border:1px solid $navy-blue;
-    }
-    &.pager-next{
+      border:1px solid transparent;
+      padding:0;
       a{
-        color:#0062e6;
-        &:before{
-          content: "\e80a";
-          font-family: icomoon;
+        color:$navy-blue;
+        height: 30px;
+        width: 30px;
+        line-height: 30px;
+        display: block;
+        &:hover{
+          background: $navy-blue;
+          color:$white;
+        }
+      }
+      &.pager-current{
+        background: $navy-blue;
+        border:1px solid $navy-blue;
+        color:$white;
+      }
+      &.pager-previous{
+        a{
+          color:#0062e6;
+          &:before{
+            content: "\e80b";
+            font-family: icomoon;
+          }
+        }
+      }
+      &.pager-next{
+        a{
+          color:#0062e6;
+          &:before{
+            content: "\e80a";
+            font-family: icomoon;
+          }
         }
       }
     }
   }
+}
+.element-invisible{
+  display: none;
 }
