--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,6 +44,10 @@
 @import "patterns/_list_actua";
 @import "patterns/_page_not_found";
 @import "patterns/_pager";
+@import "patterns/_site_content";
+@import "patterns/_detail_actua";
+@import "patterns/_search";
+@import "patterns/_project_page";
 
 //Pages
 @import "pages/_404";
